// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decrements the counter when clicking the - button 1`] = `
.emotion-0 {
  margin: 1em;
  color: red;
}

<div>
  <button
    data-testid="decrement"
  >
    -
  </button>
  <span
    class="emotion-0"
    data-testid="count"
  >
    -1
  </span>
  <button
    data-testid="increment"
  >
    +
  </button>
</div>
`;

exports[`increments the counter when clicking the + button 1`] = `
.emotion-0 {
  margin: 1em;
  color: green;
}

<div>
  <button
    data-testid="decrement"
  >
    -
  </button>
  <span
    class="emotion-0"
    data-testid="count"
  >
    1
  </span>
  <button
    data-testid="increment"
  >
    +
  </button>
</div>
`;

exports[`renders disabled buttons 1`] = `
.emotion-0 {
  margin: 1em;
  color: black;
}

<div>
  <button
    data-testid="decrement"
    disabled=""
  >
    -
  </button>
  <span
    class="emotion-0"
    data-testid="count"
  >
    0
  </span>
  <button
    data-testid="increment"
    disabled=""
  >
    +
  </button>
</div>
`;

exports[`renders enabled buttons by default 1`] = `
.emotion-0 {
  margin: 1em;
  color: black;
}

<div>
  <button
    data-testid="decrement"
  >
    -
  </button>
  <span
    class="emotion-0"
    data-testid="count"
  >
    0
  </span>
  <button
    data-testid="increment"
  >
    +
  </button>
</div>
`;
